[gd_scene load_steps=4 format=3 uid="uid://minimap_demo_scene"]

[ext_resource type="Script" path="res://scripts/battlescape/minimap_demo.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/minimap.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/minimap_unit_icon.tscn" id="3"]

[node name="MinimapDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Minimap" parent="." instance=ExtResource("2")]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 220.0

[node name="DemoControls" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 20.0
offset_right = 450.0
offset_bottom = 400.0

[node name="TitleLabel" type="Label" parent="DemoControls"]
layout_mode = 2
text = "Minimap Demo Controls"
horizontal_alignment = 1

[node name="AddUnitButton" type="Button" parent="DemoControls"]
layout_mode = 2
text = "Add Random Unit"

[node name="RemoveUnitButton" type="Button" parent="DemoControls"]
layout_mode = 2
text = "Remove Random Unit"

[node name="MoveUnitsButton" type="Button" parent="DemoControls"]
layout_mode = 2
text = "Move All Units"

[node name="ToggleFogButton" type="Button" parent="DemoControls"]
layout_mode = 2
text = "Toggle Fog of War"

[node name="AddObjectiveButton" type="Button" parent="DemoControls"]
layout_mode = 2
text = "Add Objective"

[node name="ShowThreatButton" type="Button" parent="DemoControls"]
layout_mode = 2
text = "Show Threat Zones"

[node name="FlashAreaButton" type="Button" parent="DemoControls"]
layout_mode = 2
text = "Flash Random Area"

[node name="PingEffectButton" type="Button" parent="DemoControls"]
layout_mode = 2
text = "Create Ping Effect"

[node name="HighlightPathButton" type="Button" parent="DemoControls"]
layout_mode = 2
text = "Highlight Path"

[node name="ShakeMinimapButton" type="Button" parent="DemoControls"]
layout_mode = 2
text = "Shake Minimap"

[node name="ChangeStyleButton" type="Button" parent="DemoControls"]
layout_mode = 2
text = "Change Style"

[node name="ToggleLegendButton" type="Button" parent="DemoControls"]
layout_mode = 2
text = "Toggle Legend"

[node name="DemoUnit" parent="." instance=ExtResource("3")]
visible = false
layout_mode = 0

[connection signal="pressed" from="DemoControls/AddUnitButton" to="." method="_on_add_unit_pressed"]
[connection signal="pressed" from="DemoControls/RemoveUnitButton" to="." method="_on_remove_unit_pressed"]
[connection signal="pressed" from="DemoControls/MoveUnitsButton" to="." method="_on_move_units_pressed"]
[connection signal="pressed" from="DemoControls/ToggleFogButton" to="." method="_on_toggle_fog_pressed"]
[connection signal="pressed" from="DemoControls/AddObjectiveButton" to="." method="_on_add_objective_pressed"]
[connection signal="pressed" from="DemoControls/ShowThreatButton" to="." method="_on_show_threat_pressed"]
[connection signal="pressed" from="DemoControls/FlashAreaButton" to="." method="_on_flash_area_pressed"]
[connection signal="pressed" from="DemoControls/PingEffectButton" to="." method="_on_ping_effect_pressed"]
[connection signal="pressed" from="DemoControls/HighlightPathButton" to="." method="_on_highlight_path_pressed"]
[connection signal="pressed" from="DemoControls/ShakeMinimapButton" to="." method="_on_shake_minimap_pressed"]
[connection signal="pressed" from="DemoControls/ChangeStyleButton" to="." method="_on_change_style_pressed"]
[connection signal="pressed" from="DemoControls/ToggleLegendButton" to="." method="_on_toggle_legend_pressed"]
